@@ -1,11 +1,11 @@
 #!/bin/bash
 
-export GRAILS_OPTS="-Xms2g -Xmx2g -XX:PermSize=128m -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -server"
 
 # Give grails just as much memory as is on the production system
 #export GRAILS_OPTS="-Xms2048m -Xmx2048m -XX:PermSize=128m -XX:MaxPermSize=1024m -server"
+#export GRAILS_OPTS="-Xms2g -Xmx2g -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -server"
 # new settings based on John E's suggestion
-export GRAILS_OPTS="-Xms1g -Xmx1g -XX:PermSize=128m -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -server"
+export GRAILS_OPTS="-Xms1g -Xmx1g  -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -server"
 
 # Grails - Interactive Mode
 function g-ia() {
